# treasury_agent

./: .env.example  .gitignore  INTEGRATION_STATUS.md  LOGIN_FIXED.md  QUICK_COMMANDS.md  README.md  SERVICES_FOLDERS.md  WORKSPACE.md  pyproject.toml  start.sh  treasury_conversations.db  ‎SERVICES_ARCHITECTURE.md
.github/workflows/: backend-ci.yml  backend-deploy-dev.yml  backend-deploy-prod.yml  backend.yml  frontend.yml
apps/treasury-dashboard/: README.md  next.config.js  package-lock.json  package.json
config/local/: database.yaml
config/production/: database.yaml
deploy/: Dockerfile
docs/: PHASE_4_COMPLETE.md
docs/architecture/: ARCHITECTURE.md
docs/deployment/: DEPLOYMENT_READY.md
infrastructure/environments/prod/: Dockerfile  Procfile
rag/docs/: policy_001.md  policy_002.md
rag/faiss_store/: index.faiss  index.pkl
scripts/: build_vectorstore.py  generate_mock_data.py  setup.py  start-simple.sh  start-treasury.sh
scripts/deployment/: start.sh
server/: app.py
server/routers/: analytics.py  chat.py  payments.py
server/services/: chat.py
services/: __init__.py
services/treasury_service/: README.md  app.py  demo.py  enhanced_app.py  guardrails.py  simple_app.py  test_helper.py  test_memory.py
services/treasury_service/agents/: __init__.py  base_agent.py  collections_specialist.py  communication_hub.py  compliance_officer.py  investment_advisor.py  order_agent.py  payment_agent.py  risk_manager.py  treasury_coordinator.py
services/treasury_service/detectors/: anomaly.py
services/treasury_service/forecasting/: arima_forecaster.py
services/treasury_service/graph/: graph.py  memory_graph.py  types.py
services/treasury_service/guardrails/: external_api_validation.py  keyword_checks.py  retrieval_verification.py
services/treasury_service/kpis/: working_capital.py
services/treasury_service/langchain/: __init__.py  chat_service.py  memory.py  treasury_agent.py
services/treasury_service/models/: llm_router.py
services/treasury_service/plugins/: base.py  enhanced_arima_forecaster.py  ml_anomaly_detector.py
services/treasury_service/reports/: narrative.py
services/treasury_service/routers/: analytics.py  auth.py  chat.py  payments.py  persistent_chat.py  rag.py
services/treasury_service/schemas/: auth.py  chat.py
services/treasury_service/services/: chat.py  persistent_chat.py
services/treasury_service/tests/: demo_monitoring_system.py  demo_multi_agent.py  demo_security_framework.py  production_architecture_demo.py  simple_monitoring_demo.py  simplified_demo.py  (+2 more)
shared/config/: config_manager.py
shared/types/: __init__.py
tools/: start_service.py  test_integration.py
treasury_agent/: config.py
treasury_agent/agents/: base_agent.py  treasury_coordinator.py
treasury_agent/detectors/: anomaly.py
treasury_agent/forecasting/: arima_forecaster.py  gbr_forecaster.py
treasury_agent/graph/: graph.py
treasury_agent/kpis/: working_capital.py
treasury_agent/models/: llm_router.py
treasury_agent/tools/: mock_bank_api.py
ui/: gradio_app.py
(+90 files in other folders)
